@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-02T16:12:21Z",
+  "timestamp" : "2023-08-09T16:13:55Z",
   "count_outdated" : 53,
   "uniques_outdated" : 40,
-  "count" : 56,
-  "uniques" : 42,
+  "count" : 57,
+  "uniques" : 43,
   "clones" : [
     {
       "timestamp": "2023-07-28T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2023-07-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
