@@ -1,5 +1,5 @@
 {
-  "count": 3,
+  "count": 4,
   "uniques": 2,
   "clones": [
     {
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2023-07-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
